# Roban_real_museum

./: README.md
【任务一】Roban仿真/主要代码/: Roban.ttt  bodyhub.sh  key_cmd.py  public.py  track_points.py  执行顺序.txt
【任务三】导航+语音博物馆/roban代码/: Readme.md
【任务三】导航+语音博物馆/roban代码/ros_demo_case/: CMakeLists.txt  package.xml
【任务三】导航+语音博物馆/roban代码/ros_demo_case/人脸识别/: face_detecter.py  face_tracking.py  head_controller.py  head_test.py
【任务三】导航+语音博物馆/roban代码/ros_demo_case/语音识别/: VoiceControlConfig.json
【任务三】导航+语音博物馆/roban代码/位置导航及动作/action/: demo_frame.py  kickball_frame.py
【任务三】导航+语音博物馆/roban代码/位置导航及动作/balance_face_tracking/: balance_board.py  balance_face_tracking_main.py  face_tracking.py  lejulib.py  自平衡+人脸追踪文档.md
【任务三】导航+语音博物馆/roban代码/图像识别匹配/: bow_head.py  main.py  marker_tool.py
【任务三】导航+语音博物馆/roban代码/展览位置导航/: exhit_2.py  exhit_3.py
【任务三】导航+语音博物馆/部分主要修改的代码（省流版）/: voice_control.py  特征匹配子函数feature_matching.py
【任务二】voice_control/: VoiceControlConfig.json  voice_control.py
【任务二】voice_control/ros_AIUI_node/: CMakeLists.txt  package.xml
【任务二】voice_control/ros_AIUI_node/scripts/: AIui_node.py  EventListener.py  Recorder.py  SocketClient.py  cn_num.py  head_toward_sound.py  pyAIUIConstant.py
【任务二】voice_control/ros_AIUI_node/srv/: direct_control.srv  textToSpeakMultipleOptions.srv
参考文档/: 所有节点 topic 和 service 整理.md  问题及解决.md
参考文档/基本操作/: SLAM节点graph和action leju_lib文件层级tree.md  机器人定位.md
参考文档/官方文档/: SLAM_README.md  ik_lib 逆解接口使用介绍.md  museum_README.md.md  原地踏步案例使用文档.md  摄像头图像获取接口介绍.md
参考文档/重要参考/: 仿真参考文档.md  定点移动.md  键盘控制定点移动.md
(+67 files in other folders)
